[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidyms"
version = "0.6.3"
description = "Tools for working with MS data in metabolomics"
authors = [
    { name = "Gabriel Riquelme" },
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "bokeh>=3.0",
    "Cerberus>=1.3",
    "ipython>=8.1",
    "joblib>=1.1",
    "matplotlib>=3.5.1",
    "networkx>=3.0",
    "numpy>=1.22",
    "openpyxl>=3.0",
    "pandas>=1.5.3",
    "requests",
    "scikit-learn>=1.0.2",
    "scipy>=1.8",
    "seaborn>=0.11",
    "statsmodels>=0.13",
    "tqdm>=4.0",
    "xlrd>=2.0"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/griquelme/tidyms"

[tool.mypy]
python_version = "3.9"
files = ["src/tidyms"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "./src"
]